# tarmar-auth

./: .gitignore  README.md  conftest.py  pyproject.toml
docs/: tarmar-studio-integration.md
tarmar_auth/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
tarmar_auth/migrations/: 0001_initial.py
tarmar_auth/templates/tarmar_auth/: base.html  login.html  profile.html  register.html
tests/: settings.py  test_auth.py  urls.py
